<resources>
    <string name="app_name">AuthUsers</string>
    <string name="button_value">Registrarse</string>
    <string name="button_value_login">Iniciar Sesión</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="pass_hint">Contraseña</string>
    <string name="text_login">Ya estás registrado? Has click aquí</string>
    <string name="text_singup">No estás registrado? Has click aquí</string>
    <string name="button_logout">Cerrar Sesión</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="user_saved">El usuario se guardó correctamente</string>
</resources>
